# PyTouhou

./: .gitignore  .hgignore  Cargo.toml  README  TODO  anmviewer  eclviewer.py  eosd  music.py  pcb  setup.py  stageviewer.py
data/: Makefile  menu.glade
data/ST/: Makefile  eff01.script  etama3.script  etama4.script  face00a.script  face03a.script  make_ecl.py  make_stage.py  msg1.script  player00.script  stg1bg.script  stg1enm.script  stg1enm2.script
doc/: PBG3
examples/: anmrenderer.rs  eclrenderer.rs  stdrenderer.rs
pytouhou/: __init__.py  menu.py  network.py  options.py
pytouhou/formats/: __init__.py  animation.pxd  animation.pyx  anm0.pxd  anm0.py  anm0.pyx  ecl.py  exe.py  fmt.py  hint.py  msg.py  music.py  pbg3.py  score.py  sht.py  std.py  t6rp.py  thtx.py
pytouhou/game/: __init__.py  background.py  bullet.pxd  bullet.py  bullet.pyx  bullettype.pxd  bullettype.py  character.py  eclrunner.py  effect.pxd  effect.py  effect.pyx  element.pxd  element.py  enemy.pxd  enemy.py  enemy.pyx  enemymanager.py  face.py  game.pxd  game.py  game.pyx  games.py  item.pxd  item.py  item.pyx  itemtype.pxd  itemtype.py  laser.pxd  laser.py  laser.pyx  lasertype.pxd  lasertype.py  music.pxd  music.py  orb.pxd  orb.py  particle.pxd  particle.pyx  player.pxd  (+7 more)
pytouhou/games/: eosd.py  pcb.py
pytouhou/interfaces/: eosd.py  sample.py
pytouhou/lib/: _glfw.pxd  _sdl.pxd  glfw.pxd  glfw.pyx  gui.pxd  gui.pyx  opengl.pxd  opengl.pyxbld  sdl.pxd  sdl.pyx  sdl.pyxbld
pytouhou/opengl/: background.py  gamerenderer.py  gamerunner.py  (+3 more)
scripts/: anmviewer  pytouhou
src/: lib.rs
(+103 files in other folders)
