[package]
name = "touhou"
version = "0.1.0"
authors = ["Emmanuel Gil Peyrot <linkmauve@linkmauve.fr>"]
edition = "2018"
description = "A collection of tools to work with Touhou data"
homepage = "https://pytouhou.linkmauve.fr"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5"
encoding_rs = "0.8"
image = { version = "0.22", default-features = false, features = ["png_codec"] }
luminance = { version = "*", path = "../luminance/luminance" }
luminance-glfw = { version = "*", path = "../luminance/luminance-glfw", default-features = false }
luminance-derive = { version = "*", path = "../luminance/luminance-derive" }

[profile.dev]
panic = "abort"
